# wsd-crawling

./: LICENSE  README.md
backend/: Dockerfile  README.md  crawled-data.sql  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/api/: deps.py  jobs.py  main.py
backend/app/api/routes/: applications.py  bookmarks.py  jobs.py  login.py  users.py  utils.py
backend/app/core/: auth_middleware.py  config.py  db.py  security.py
backend/app/crud/: crud.py
backend/app/models/: Application.py  ApplicationRepository.py  Bookmark.py  BookmarkRepository.py  JobPosting.py  JobPostingRepository.py  models.py
backend/app/utils/: crawl_saramin.py  utils.py
